# bolt-events

./: Dockerfile  docker-compose.yaml  main.py  manage.py  pyproject.toml
a2a_app/: __init__.py  api.py  apps.py  events.py  executors.py  handlers.py  helpers.py  models.py  redis_client.py  schemas.py  services.py  urls.py
a2a_app/migrations/: 0001_initial.py
a2a_app/static/js/: playground.js
a2a_app/templates/: base.html
a2a_app/templates/playground/: _input.html  _messages.html  _sidebar.html  index.html
a2a_project/: __init__.py  apps.py  settings.py  urls.py
tests/: conftest.py  factories.py  settings.py
tests/e2e/: test_api.py  test_playground.py  test_sse.py
tests/integration/: test_events.py  test_services.py
tests/unit/: test_executors.py  test_models.py  test_schemas.py
